# users/routes/routes.go
@@ -2,9 +2,11 @@ package routes
 
 import (
 	"github.com/NARUBROWN/spine"
+	"github.com/NARUBROWN/spine/pkg/route"
+	authInterceptor "github.com/ppopgi-pang/ppopgipang-spine/auth/interceptor"
 	"github.com/ppopgi-pang/ppopgipang-spine/users/controller"
 )
 
 func RegisterUserRoutes(app spine.App) {
-	app.Route("GET", "/v1/users", (*controller.UserController).GetUserInfo)
+	app.Route("GET", "/users/me", (*controller.UserController).GetUserInfo, route.WithInterceptors((*authInterceptor.AccessTokenInterceptor)(nil)))
 }
